Prevent overflowing titles on card details page

--- a/src/styles/layouts/_complaintDetails.scss
+++ b/src/styles/layouts/_complaintDetails.scss
@@ -11,12 +11,13 @@
 
     &__title {
         font-size: 2.3rem;
-        max-width: 150px;
+        max-width: 340px;
+        white-space: initial;
         font-weight: bold;
-        white-space: nowrap;
         text-align: start;
         font-family: "Spartan", sans-serif;
         color: $secondary-blue;
+        word-wrap: break-word;
     }
 
     &__imageBox {
